# OpenCowork

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  test.yml
docs/: README.md
opencowork/: __init__.py  cli.py  config.py  core.py
opencowork/agent/: __init__.py  executor.py  llm_service.py  planner.py
opencowork/api/: __init__.py  app.py  models.py  server.py  server_impl.py  session.py
opencowork/sandbox/: __init__.py  docker_runner.py  permissions.py
opencowork/tools/: __init__.py  base.py  browser.py  filesystem.py  sandbox_tools.py  scraper.py
policies/: permissions.yaml
scripts/: build.sh  setup.sh
src/: App.tsx
src-tauri/: tauri.conf.json
src/components/: index.ts
src/components/common/: Button.tsx  ConfirmationDialog.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  Progress.tsx  Toast.tsx  index.ts
src/components/examples/: IntegratedTaskInterface.tsx
src/components/task/: ConfirmationDialog.tsx  ExecutionMonitor.tsx  LogViewer.tsx  PlanReview.tsx  TaskCreate.tsx  TaskHistory.tsx  index.ts
src/components/workspace/: ChatPanel.tsx  PreviewPanel.tsx  ProgressSidebar.tsx  WorkspaceLayout.tsx  index.ts  types.ts
src/hooks/: index.ts  useForm.ts  usePolicy.ts  useQuery.ts  useTask.ts  useTaskConfirmation.ts  useWebSocket.ts
src/pages/: History.tsx  Home.tsx  Settings.tsx  TaskDetail.tsx  index.ts
src/services/: api.ts  websocket.ts
src/store/: apiStore.ts  index.ts  taskStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: validation.ts
tests/: conftest.py
tests/fixtures/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_executor.py  test_planner.py
