[tool.poetry]
name = "opencowork"
version = "0.1.0a0"
description = "Open-source agentic workspace for autonomous multi-step task execution"
authors = ["OpenCowork Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/opencowork/opencowork"
repository = "https://github.com/opencowork/opencowork"
documentation = "https://opencowork.dev"
keywords = ["agent", "autonomous", "workspace", "ai", "task-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
packages = [
    { include = "opencowork" }
]

[tool.poetry.dependencies]
python = "^3.11"
# LLM & Agent Orchestration
langgraph = "^0.2.0"
langchain = "^0.2.0"
langchain-core = "^0.2.0"
# Model Support
ollama = "^0.1.0"
openai = "^1.0.0"
# Data & Serialization
pydantic = "^2.0"
pydantic-settings = "^2.0"
# Async & Concurrency
aiohttp = "^3.9.0"
asyncio-contextmanager = "^1.0.0"
# Logging & Monitoring
python-json-logger = "^2.0"
loguru = "^0.7.0"
# Configuration
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
# File & System Operations
aiofiles = "^23.0"
# Docker
docker = "^7.0.0"
# CLI
typer = "^0.9.0"
rich = "^13.0.0"
click = "^8.0"
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
# Code Quality
black = "^23.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ruff = "^0.1.0"
# Type Stubs
types-pyyaml = "^6.0"
types-aiofiles = "^23.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
jupyter = "^1.0.0"
pytest-xdist = "^3.5.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
opencowork = "opencowork.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=opencowork --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = [
    "*/site-packages/*",
    "*/distutils/*",
    "*/tests/*",
]

[tool.ruff]
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # bandit
]
ignore = [
    "E501",   # line too long
    "D100",   # missing docstring in module
    "D104",   # missing docstring in __init__
    "D105",   # missing docstring in magic method
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]
